styles.css
* {
    box-sizing: border-box;
    list-style: none;
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
    scroll-behavior: smooth;
}

.navbar {
    background: #131313; 
    background:
    linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
    linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
    background-color: #131313;
    background-size: 20px 20px;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 1;
}

.navbar_container {
    display: flex;
    justify-content: center;
    height: 80px;
    z-index: 1;
    width: 100%;
    max-width: 1900px;
    margin: 0 auto;
    padding: 0 50px;
}

.navbar_menu {
    display: flex;
    align-items: center;
    list-style: none;
}

.navbar_item {
    height: 80px;
}

.navbar_links{
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 125px;
    text-decoration: none;
    height: 100%;
    transition: all 0.3s ease;

}

.navbar_btn {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 1rem;
    width: 100%;
}

.button {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    padding: 10px 20px;
    height: 100%;
    width: 100%;
    border: none;
    outline: none;
    border-radius: 4px;
    background: #f12711;
    background: -webkit-linear-gradient(to right, #f5af19, #f12711);  
    background: linear-gradient(to right, #f5af19, #f12711);
    color: #fff;
    transition: all 0.3s ease;
}

.navbar_links:hover {
    color: #f12711;
    transition: all 0.3s ease;
}

@media screen and (max-width: 660px) {
    /* .navbar_container {
        display: flex;
        justify-content: center;
        height: 80px;
        z-index: 1;
        width: 100%;
        max-width: 1300px;
        padding: 0; 
    } */
    
    .navbar_menu {
        display: grid;
        grid-template-columns: auto;
        margin: 0;
        background:
        linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
        linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
        linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
        linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
        linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
        linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
        background-color: #131313;
        background-size: 20px 20px;
        width: 100%;
        position: absolute;
        top: -1000px;
        opacity: 1;
        transition: all 0.5s ease;
        z-index: -1;
    }

    .navbar_menu.active {
        
        top: 100%;
        opacity: 1;
        transition: all 0.5s ease;
        z-index: 1;
        height: 40vh;
        font-size: 1.6rem;
    }


    .navbar_icon {
        cursor: pointer;
    }

    .navbar_icon .bar {
        width: 25px;
        height: 3px;
        margin: 5px auto;
        transition: all 0.3s ease-in-out;
        background: #fff;
        display: block;
    } 

    .navbar_links {
        text-align: center;
        padding: 2rem;
        width: 100%;
        display: table;         
    }

    .navbar_btn {
        padding-bottom: 2rem;
    }

    .button {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 80%;
        height: 80px;
        margin: 0;
    }

    #mobile-menu {
        position: absolute;
        top: 20%;
        right: 5%;
        transform: translate(5%, 20%);
    }

    #mobile-menu.is-active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    #mobile-menu.is-active .bar:nth-child(2) {
        opacity: 0;
    }
    
    #mobile-menu.is-active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }
}

